--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,19 @@
   "homepage": "https://github.com/chenjiangsong/stone#readme",
   "dependencies": {
     "koa": "^2.0.0",
+    "koa-mount": "^1.3.0",
+    "koa-router": "^5.4.0",
     "vue": "^2.0.0-rc.2",
     "vue-router": "^2.0.0-rc.3"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015-node5": "^1.2.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
     "gulp": "^3.9.1",
