--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "views": "nodemon koa/app.views.js"
   },
   "repository": {
     "type": "git",
@@ -23,13 +24,14 @@
   "dependencies": {
     "koa": "^2.0.0",
     "koa-mount": "^1.3.0",
-    "koa-router": "^5.4.0",
+    "koa-router": "^7.0.0",
+    "koa-static": "^2.0.0",
+    "koa-views": "^5.0.1",
     "vue": "^2.0.0-rc.2",
     "vue-router": "^2.0.0-rc.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.13.2",
@@ -40,6 +42,7 @@
     "gulp": "^3.9.1",
     "jade": "^1.11.0",
     "node-sass": "^3.8.0",
+    "runkoa": "^1.5.2",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
