--- a/package.json
+++ b/package.json
@@ -38,15 +38,19 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "jade": "^1.11.0",
     "node-sass": "^3.8.0",
+    "postcss-loader": "^0.10.1",
+    "postcss-px2rem": "^0.3.0",
     "runkoa": "^1.5.2",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-notifier": "^1.4.0"
   }
 }
