--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
     "koa-views": "^5.0.1",
+    "underscore": "^1.8.3",
     "vue": "^2.0.0-rc.2",
     "vue-router": "^2.0.0-rc.3"
   },
@@ -39,6 +40,7 @@
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
     "jade": "^1.11.0",
     "node-sass": "^3.8.0",
