--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/chenjiangsong/stone#readme",
   "dependencies": {
+    "animate.css": "^3.5.1",
     "koa": "^2.0.0",
     "koa-mount": "^1.3.0",
     "koa-router": "^7.0.0",
@@ -28,7 +29,8 @@
     "koa-views": "^5.0.1",
     "underscore": "^1.8.3",
     "vue": "^2.0.0-rc.2",
-    "vue-router": "^2.0.0-rc.3"
+    "vue-router": "^2.0.0-rc.3",
+    "vux": "^0.1.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -38,15 +40,20 @@
     "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.24.0",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
     "jade": "^1.11.0",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.10.1",
     "postcss-px2rem": "^0.3.0",
     "runkoa": "^1.5.2",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
