--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
   "homepage": "https://github.com/chenjiangsong/stone#readme",
   "dependencies": {
     "animate.css": "^3.5.1",
+    "jquery": "^3.1.0",
     "koa": "^2.0.0",
     "koa-mount": "^1.3.0",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
     "koa-views": "^5.0.1",
+    "normalize.css": "^4.2.0",
+    "semantic-ui": "^2.2.4",
     "underscore": "^1.8.3",
     "vue": "^2.0.0-rc.2",
     "vue-router": "^2.0.0-rc.3",
-    "vux": "^0.1.3"
+    "vux": "^0.1.3",
+    "weui": "^0.4.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -44,6 +48,7 @@
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
